--- a/style.css
+++ b/style.css
@@ -5,5 +5,12 @@ h1, h2,p {
   /*OMG YOU CAN ASSIGN MULTIPLE ELEMENTS W CSS???*/
 
   body{
-    background-color:brown;
+   /* background-color:burlywood; */
+  }
+
+  div {
+    width: 80%;
+    background-color: burlywood;
+    /*this makes it 80% of whatever the body size is set to btw, not the full html 
+    page, so if body set 1000px, div na 800px inna width*/
   }
