--- a/style.css
+++ b/style.css
@@ -29,4 +29,5 @@ h1, h2,p {
     display:inline-block;
   }
   /*okay so this means that if you have a paragraph element??? 
-  and that paragraph element is called item?? then you appply the following css*/
+  and that paragraph element is called item?? then you appply the following css
+  meaning the stuff underneath is now on one line*/
