--- a/style.css
+++ b/style.css
@@ -24,9 +24,12 @@ h1, h2,p {
     */
   }
 
+  angrydiv { background: red; color: white; display: block; }
+
   .item p{
 
     display:inline-block;
+    
   }
   /*okay so this means that if you have a paragraph element??? 
   and that paragraph element is called item?? then you appply the following css
