--- a/style.css
+++ b/style.css
@@ -2,21 +2,25 @@ h1, h2,p {
     text-align: center;
   }
 
-  /*OMG YOU CAN ASSIGN MULTIPLE ELEMENTS W CSS???*/
+  /*OMG YOU CAN ASSIGN MULTIPLE ELEMENTS W CSS???
+  YOU CAN ASSIGN BACKGROUND IMAGE BY URL????*/
 
   body {
   
     background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
-    
-  }
+    font-family: sans-serif;
+}
+
+
 
   .menu {
     width: 80%;
+    max-width:500px;
+    /*max width makes sure the widest the thing gets is 500px here*/
     background-color: burlywood;
     margin-left: auto;
     margin-right: auto;
     padding:20px;
-
 
 
     /*this makes it 80% of whatever the body size is set to btw, not the full html 
@@ -50,3 +54,19 @@ h1, h2,p {
   we move tho */
 
   /*read pls*/
+
+  h1 {
+    font-size: 40px;
+  }
+  
+  h2 {
+    font-size: 30px;
+  }
+  
+  .established {
+    font-style: italic;
+  }
+  
+  h1, h2 {
+    font-family: Impact, serif;
+  }
