--- a/style.css
+++ b/style.css
@@ -75,5 +75,6 @@ h1, h2,p {
   hr{
     height:3px;
     background-color:brown;
+    border-color: brown;
     /*get rid of the outline too babe, use the border colour for that*/
   }
