--- a/style.css
+++ b/style.css
@@ -75,10 +75,8 @@ h1, h2,p {
   hr{
     height:2px;
     background-color:brown;
-<<<<<<< HEAD
     border-color: brown;
-=======
-    border: brown;
->>>>>>> c37fce1cce0cda10e26d1d73e87868e56c627cb3
-    /*get rid of the outline too babe, use the border colour for that*/
+    /*get rid of the outline too babe, use the border colour for that
+    i think she messed up with the push and pull thingy
+    */
   }
