--- a/style.css
+++ b/style.css
@@ -52,20 +52,17 @@ it makes the inside sections smalled
   meaning the stuff underneath is now on one line*/
   }
 
-  .item{
-    width: 90%;
-    margin: auto;
-  }
+
 
  .dessert, .flavor {
     text-align: left;
     background-color: thistle;
-    float: left;
+  width: 75%;
   }
   
   .price {
     text-align: right;
-    float: right;
+width: 25%;
     background-color: bisque;
   }
   /*OKAY SO the width increase will widen each of the para blocks,,
@@ -145,9 +142,10 @@ a{
     color:brown;
     font-weight: 700;
   }
+  /*hovver over and you get tgis... */
 
   a:active{
-    color:brown;
+    color:aliceblue;
   }
 
   /*hovering you can change the effect too!*/
