--- a/style.css
+++ b/style.css
@@ -145,7 +145,9 @@ a{
   /*hovver over and you get tgis... */
 
   a:active{
-    color:aliceblue;
+    color:thistle;
+    /*but clicked on is diff from HAS BEEN clicked on in the past
+    so here is like when you click it it goes pink temporarily xx*/
   }
 
   /*hovering you can change the effect too!*/
